# blenderlm

./: .gitignore  LICENSE  README.md  pyproject.toml
blenderlm/: cli.py
blenderlm/addon/: README.md  blenderlm_addon.py  test_addon.py
blenderlm/client/: __init__.py  client.py  tools.py
blenderlm/client/agents/: __init__.py  _base_agent.py  _google_agent.py  _openai_agent.py
blenderlm/client/agents/openai/: _oai_utils.py  _openai_agent.py  _planner_agent.py  _test_oai_agent.py  _verifier_agent.py
blenderlm/server/: app.py  connection.py  database.py  job_queue.py  models.py
blenderlm/server/routes/: __init__.py  blender.py  jobs.py  misc.py  projects.py  ws.py
frontend/: .gitignore  README.md  gatsby-config.ts  package.json
frontend/src/: gatsby-types.d.ts
frontend/src/components/: contentheader.tsx  footer.tsx  header.tsx  icons.tsx  layout.tsx  sidebar.tsx
frontend/src/components/types/: AgentMessages.ts
frontend/src/components/utils/: MessageRenderer.tsx  blenderapi.ts
frontend/src/components/views/: SceneInfoPanel.tsx
frontend/src/components/views/main/: manager.tsx  sidebar.tsx  types.tsx
frontend/src/components/views/main/labs/: ChatPanel.tsx  ConnectionStatus.tsx  ControlsPanel.tsx  ProjectManagerPanel.tsx  ViewportPanel.tsx  manualcontrol.tsx
frontend/src/hooks/: store.tsx
frontend/src/pages/: index.tsx
frontend/src/styles/: global.css  theme.css
tests/client/agents/: test_google_agent.py
ui/: gatsby-config.ts  package.json
ui/src/components/views/: main.tsx
ui/src/pages/: index.tsx
